[gd_scene load_steps=10 format=2]

[ext_resource path="res://titleformat.tres" type="DynamicFont" id=1]
[ext_resource path="res://GameOver.gd" type="Script" id=2]
[ext_resource path="res://Images/KurriIslandPersonalRegular-WyVaV.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Button_N.tres" type="StyleBox" id=4]
[ext_resource path="res://Button_P.tres" type="StyleBox" id=5]
[ext_resource path="res://Images/end_dead.png" type="Texture" id=6]
[ext_resource path="res://Images/end_win.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]
size = 120
font_data = ExtResource( 3 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[node name="GameOver" type="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -1873.66, 156.105 )
color = Color( 0, 0.313726, 0.305882, 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EndText" type="Label" parent="."]
margin_top = 58.368
margin_right = 1079.0
margin_bottom = 693.368
rect_scale = Vector2( 0.996726, 1 )
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0.423529, 0.988235, 0.631373, 1 )
text = "You were eaten..."
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Replay" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -471.0
margin_top = -503.0
margin_right = 21.0
margin_bottom = -271.0
rect_scale = Vector2( 0.913652, 0.946504 )
theme = SubResource( 2 )
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/normal = ExtResource( 4 )
text = "Replay"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 46.0
margin_top = -503.0
margin_right = 516.0
margin_bottom = -271.0
rect_scale = Vector2( 0.913652, 0.946504 )
theme = SubResource( 2 )
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/normal = ExtResource( 4 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeadVisual" type="TextureRect" parent="."]
visible = false
margin_left = 138.0
margin_top = 898.0
margin_right = 932.0
margin_bottom = 1344.0
texture = ExtResource( 6 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WinVisual" type="TextureRect" parent="."]
visible = false
margin_left = 202.51
margin_top = 714.468
margin_right = 859.51
margin_bottom = 1381.47
texture = ExtResource( 7 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Replay" to="." method="_on_Main_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_Button_pressed"]
